GNOME Bugzilla – Bug 771528
vaapivp8enc segfault
Last modified: 2016-09-30 07:05:35 UTC
1) generate sample gst-launch-1.0 videotestsrc num-buffers=242 pattern=snow ! video/x-raw\,\ format\=\(string\)I420\,\ width\=\(int\)1920\,\ height\=\(int\)1080\,\ framerate\=\(fraction\)30/1 ! filesink location=/tmp/buf.raw 2) run encode pipeline gst-launch-1.0 filesrc location=/tmp/buf.raw blocksize=3110400 ! video/x-raw\,\ format\=\(string\)I420\,\ width\=\(int\)1920\,\ height\=\(int\)1080\,\ framerate\=\(fraction\)30/1 ! queue name=encoder ! vaapivp8enc ! fakesink libva info: VA-API version 0.39.2 libva info: va_getDriverName() returns 0 libva info: Trying to open /usr/lib/dri/i965_drv_video.so libva info: Found init function __vaDriverInit_0_39 libva info: va_openDriver() returns 0 Le pipeline est en phase de PREROLL… Contexte de l’élément « vaapiencodevp8-0 » : gst.vaapi.Display=context, gst.vaapi.Display=(GstVaapiDisplay)NULL; Le pipeline a terminé la phase PREROLL… Passage du pipeline à la phase PLAYING… New clock: GstSystemClock Caught SIGSEGV
+ Trace 236672
Hm, we are not getting enough compression for some frames and eventually end up with compressed frame size more than what we allocated...let me prepare a quick fix...
Created attachment 335697 [details] [review] encoder: vp8: Increase the allocation size for coded buffer Florent, could you please try with this patch?
Seems to fix it, thanks !
Review of attachment 335697 [details] [review]: commit 0fae277d34cd2db89c9c7be45f41684f1040052f Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Wed Sep 21 09:55:53 2016 +0300 Pused, encoder: vp8: Increase the allocation size for coded buffer We are not getting enough compression for some streams and encoded frame end up with more size than allocated. Assuming a compression ratio of 4, which should be good enough for holding the frames. https://bugzilla.gnome.org/show_bug.cgi?id=771528
Closing.